refactoring - fixed some code violations